docs: atualizado README

--- a/docs/README.mb
+++ b/docs/README.mb
@@ -7,7 +7,7 @@ Nome dos Integrantes do grupo
 
 Felipe Piquetti
 Mourvan Henrique Maes
-Bruno Venicius
+Bruno Vinicius Santos Martins
 Alan 
 
 As telas foram desenvolvidas no Figma, aplicando conceitos de identidade visual (cores, fontes, espaçamento) 
