--- a/docs/README.mb
+++ b/docs/README.mb
@@ -7,8 +7,8 @@ Nome dos Integrantes do grupo
 
 Felipe Piquetti
 Mourvan Henrique Maes
-Bruno Vinicius Santos Martins
-Alan 
+Bruno Vinicius Santos Martins 
+Allan Hiran Pereira Gularte
 
 As telas foram desenvolvidas no Figma, aplicando conceitos de identidade visual (cores, fontes, espaçamento) 
 e fluxo de navegação entre as principais funcionalidades.
